--- a/DilkashDBMS/appsettings.json
+++ b/DilkashDBMS/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Dilkash": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Dilkash;Integrated Security=True;"
+    "Dilkash": "Data Source=(localdb)\\MSSQLLocalDB; AttachDbFilename=|DataDirectory|\\AppData\\Dilkash.mdf;Initial Catalog=Dilkash;Integrated Security=True;"
   }
 }
